force-app/main/default/objects/C360_Contract__c.object
<CustomObject>
    <fields>
        <fullName>ActionTaken__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Action Taken</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComXID__c</fullName>
        <label>ComX ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractDocuments__c</fullName>
        <label>Contract Documents</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContractEndDate__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractNumber__c</fullName>
        <label>Contract Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractStartDate__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractType__c</fullName>
        <description>Sales Organization</description>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SalesOrganization__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SMV</fullName>
                    <label>Small Volume</label>
                </value>
                <value>
                    <fullName>SPT</fullName>
                    <label>Spot</label>
                </value>
                <value>
                    <fullName>TRM</fullName>
                    <label>Term</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_By_BU__c</fullName>
        <description>For Salesforce Adoption Dashboard 
For viewing the User&apos;s BU</description>
        <formula>CreatedBy.BU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create By BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditLimit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discharge_Port__c</fullName>
        <label>Discharge Port</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Kandla</fullName>
                </value>
                <value>
                    <fullName>Nhava Sheva</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DistributionChannel__c</fullName>
        <label>Distribution Channel</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SalesOrganization__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>DistributionChannel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>DistributionChannel__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Division</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DocumentNumber__c</fullName>
        <externalId>true</externalId>
        <label>Document Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <formula>ContractEndDate__c</formula>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incoterms__c</fullName>
        <label>Incoterms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Incoterm</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Modified_By_BU__c</fullName>
        <description>For Salesforce Adoption Dashboard 
For viewing the User&apos;s BU</description>
        <formula>LastModifiedBy.BU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified By BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoadingEndDate__c</fullName>
        <label>Loading End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LoadingStartDate__c</fullName>
        <label>Loading Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MasterContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Contract</label>
        <referenceTo>C360_Contract__c</referenceTo>
        <relationshipLabel>Contract</relationshipLabel>
        <relationshipName>Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PODate__c</fullName>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PONumber__c</fullName>
        <label>PO Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentTerm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Term</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Payment Term</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Contract (Payment Term)</relationshipLabel>
        <relationshipName>Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PricingDate__c</fullName>
        <label>Pricing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RemainingDays__c</fullName>
        <formula>IF(
    ContractEndDate__c &gt; TODAY(),
    ContractEndDate__c - TODAY(),
    NULL
)</formula>
        <label>Remaining Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesDocumentType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Document Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Sales Document Type</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Contract (Sales Document Type)</relationshipLabel>
        <relationshipName>Contract1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesOrganization__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SalesOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShipTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship-To Party</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Ship To</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sold To</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contract (Ship-To Party)</relationshipLabel>
        <relationshipName>Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShippingCondition__c</fullName>
        <label>Shipping Condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ShippingConditions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SoldTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold-To Party</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sold To</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Ship To</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contract (Sold-To Party)</relationshipLabel>
        <relationshipName>Contract1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DocumentNumber__c</columns>
        <columns>ContractNumber__c</columns>
        <columns>SoldTo__c</columns>
        <columns>SalesOrganization__c</columns>
        <columns>ContractType__c</columns>
        <columns>ContractStartDate__c</columns>
        <columns>ContractEndDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SFCT{0000000}</displayFormat>
        <label>SF Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>URLFormatValidation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
    NOT(ISBLANK(ContractDocuments__c)),
    NOT(BEGINS(ContractDocuments__c, &quot;https://&quot;)),
    NOT(BEGINS(ContractDocuments__c, &quot;http://&quot;)),
    NOT(BEGINS(ContractDocuments__c, &quot;www.&quot;)),
    NOT(BEGINS(ContractDocuments__c, &quot;\\&quot;)),
    NOT(REGEX(ContractDocuments__c,&quot;^((25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\\.){3}(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)$&quot;))
)</errorConditionFormula>
        <errorDisplayField>ContractDocuments__c</errorDisplayField>
        <errorMessage>Please check your URL again</errorMessage>
    </validationRules>
</CustomObject>